change the text

--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
     our mission is to provide unforgettable adventures that go beyond the ordinary.</p>
 
     <h2>Our Story</h2>
-    <p>Every journey has a beginning, and ours started on the bustling streets of Bangkok. <br>
-      After a chance meeting between Jane and John, two avid travelers from different corners of the world,<br>
-      Wanderlust Voyages was born out of a shared dream to help others experience the beauty and wonder of our planet.
+    <p>Our voyage began on the crowded streets of Bangkok, as does every travel.  <br>
+         Wanderlust Voyages was founded as a result of a chance encounter between Jane and John,<br>
+     two ardent travelers from different parts of the world, and their common desire to assist others in experiencing the wonder and beauty of our planet.
     </p>
  
    <table>
