made changes to the text

--- a/services.html
+++ b/services.html
@@ -69,21 +69,21 @@
       <ul>
          <li>
             <h2>Itinerary Planning and Tour Packages:</h2>
-            <p>Travel agencies offer customized and pre-packaged tours to suit the preferences of individual travelers or groups. <br>
-               These can range from local city tours to extensive multi-country expeditions. <br>
+            <p>To accommodate the tastes of individual passengers or groups, travel agencies provide pre-packaged and customized excursions.  <br>
+               These can range from brief city trips to extensive international journeys. <br>
                The agency handles all aspects, from creating an itinerary that includes sightseeing, activities, and experiences, to ensuring that all logistics like transport and accommodation are smoothly coordinated.</p>
             
          </li>
          <li>
             <h2>Flight and Transport Bookings</h2>
-            <p>One of the primary services offered by travel agencies is the reservation of flights. <br>
+            <p>Flight booking is one of the main services provided by travel agents. <br>
                This encompasses domestic and international travel, and can also extend to charter flights for special groups or events. Apart from flights, agencies also book other modes of transportation such as trains, buses, and car rentals, ensuring that travelers can move seamlessly from one destination to another.
             </p>
             
          </li>
          <li>
             <h2>Accommodation Reservations</h2>
-            <p>Travel agencies have partnerships and affiliations with a wide range of accommodations, from luxury hotels to budget hostels and local guesthouses. 
+            <p>Luxury hotels, as well as affordable hostels and regional guesthouses, are just a few of the places that travel firms have affiliations and agreements with. 
                <br>They assist travelers in finding and booking lodgings that fit their budget, preferences, and travel itinerary. Often, due to established relationships, agencies can secure rooms at competitive rates and sometimes with added benefits.
 
             </p>
