--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="service-column">
             <img src="images/ladies facial.png" alt="Illustration of a hotel">
             <h3>Accommodation Reservations</h3>
-            <p>Travel agencies have partnerships and affiliations with a wide range of hotels.</p>
+            <p>Numerous hotels are affiliated and partnered with travel firms.</p>
           </div>
 
           <div class="service-column">
@@ -73,7 +73,7 @@
           <div class="service-column">
             <img src="images/reservation.png" alt="Illustration representing activities and excursions">
             <h3>Activity & Excursion Bookings</h3>
-            <p>We curate and book a diverse range of local activities and excursions for unforgettable experiences.</p>
+            <p>We select and reserve a wide variety of regional excursions and activities for life-changing experiences.</p>
           </div>
 
         </div>
