--- a/index1.html
+++ b/index1.html
@@ -40,9 +40,9 @@
       <section>
         <h1>Our Story</h1>
         <p>
-          Every journey has a beginning, and ours started on the bustling streets of Bangkok. 
-          After a chance meeting between Jane and John, two avid travelers from different corners of the world, 
-          <b>Wanderlust Voyages</b> was born out of a shared dream to help others experience the beauty and wonder of our planet.
+        Our voyage began on the crowded streets of Bangkok, as does every travel. 
+                   A serendipitous encounter between Jane and John, two ardent travelers from different parts of the world, led to the creation of Wanderlust Voyages,
+          <b>which was inspired by a shared desire to assist others in experiencing the wonder and beauty of our planet.
         </p>
         <p>We provide top-notch services to our clients.</p>
       </section>
@@ -55,7 +55,7 @@
           <div class="service-column">
             <img src="images/Flights.png" alt="Illustration representing flight bookings">
             <h3>Flight and Transport Bookings</h3>
-            <p>One of the primary services offered by travel agencies is the reservation of flights.</p>
+            <p>Flight booking is one of the main services provided by travel agents.</p>
           </div>
 
           <div class="service-column">
@@ -67,13 +67,13 @@
           <div class="service-column">
             <img src="images/tour packages.png" alt="Illustration representing tour packages">
             <h3>Itinerary Planning and Tour Packages</h3>
-            <p>Travel agencies offer customized and pre-packaged tours to suit the preferences of travelers.</p>
+            <p>Travel businesses provide pre-packaged and personalized excursions to accommodate travelers' tastes..</p>
           </div>
 
           <div class="service-column">
             <img src="images/reservation.png" alt="Illustration representing activities and excursions">
             <h3>Activity & Excursion Bookings</h3>
-            <p>We curate and book a diverse range of local activities and excursions for unforgettable experiences.</p>
+            <p>We select and reserve a wide variety of regional excursions and activities for life-changing experiences.</p>
           </div>
 
         </div>
