--- a/week 2/gallery.html
+++ b/week 2/gallery.html
@@ -26,7 +26,7 @@
   <header>
     <h1 class="headeraH1">Wanderlust Voyages | Travel Agency</h1>
 	</header>
-    <nav>
+    <nav class=“sticky-nav”>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
