--- a/week 2/index.html
+++ b/week 2/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <!-- Navigation Section -->
-    <nav>
+    <nav class=“sticky-nav”>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
