--- a/week 2/index.html
+++ b/week 2/index.html
@@ -16,17 +16,17 @@
       <h1 class="headeraH1">Wanderlust Voyages | Travel Agency</h1>
     </header>
 
-    <!-- Navigation Section -->
-    <nav class=“sticky-nav”>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="tasks.html">Tasks</a></li>
-    </ul>
-    </nav>
+   <!— Navigation Section —>
+<nav class=“sticky-nav”>
+  <ul>
+    <li><a href=“index.html”>Home</a></li>
+    <li><a href=“about.html”>About</a></li>
+    <li><a href=“services.html”>Services</a></li>
+    <li><a href=“gallery.html”>Gallery</a></li>
+    <li><a href=“contact.html”>Contact</a></li>
+    <li><a href=“tasks.html”>Tasks</a></li>
+  </ul>
+</nav>
 
     <!-- Banner Section -->
     <section class="banner-container">
