--- a/week 3/index.html
+++ b/week 3/index.html
@@ -34,8 +34,9 @@
 
     <!-- Banner Section -->
     <section class="banner-container">
-      <img src="images/travel banner.svg" alt="Illustrative banner of travel destinations" class="centered-banner">
-    </section>
+<img name="slide" alt="Alt goes here" title="Title goes here"
+width="70%"/>
+</section>
 
     <!-- Main Content Section -->
     <main class="services">
@@ -93,7 +94,7 @@
       <section class="cta-container">
         <h2>Ready to Experience Our Services?</h2>
         <p>Join us today and discover the difference we can make for you!</p>
-         <a href="form.html" class="cta-button"><span>Contact Us Now</span></a>
+        <a href="form.html" class="cta-button"><span>Contact Us Now</span></a>
       </section>
 
     </main>
@@ -108,5 +109,39 @@
       <p>&copy; 2024 Wanderlust Voyages | Travel Agency. All rights reserved.</p>
     </footer>
   </div>
+  <script>
+       var i = 0; 			// Start Point
+var images = [];	// Images Array
+var time = 3000;	// Time Interval Between Switch
+	 
+// Image List
+images[0] = "images/img1.jpg";
+images[1] = "images/img2.jpg";
+images[2] = "images/img3.jpg";
+images[3] = "images/img4.jpg";
+images[4] = "images/img5.jpg";
+
+// Change Image
+function changeImg(){
+	document.slide.src = images[i];
+
+	// Check If Index Is Under Max
+	if(i < images.length - 1){
+	  // Add 1 to Index
+	  i++; 
+	} else { 
+		// Reset Back To O
+		i = 0;
+	}
+
+	// Run function every x seconds
+	setTimeout("changeImg()", time);
+}
+
+// Run function when page loads
+window.onload=changeImg;
+
+      </script>
 </body>
 </html>
+
