--- a/week 3/index.html
+++ b/week 3/index.html
@@ -118,7 +118,7 @@ var time = 3000;	// Time Interval Between Switch
 images[0] = "images/img1.jpg";
 images[1] = "images/img2.jpg";
 images[2] = "images/img3.jpg";
-images[3] = "images/img4.jpg";
+images[3] = "images/img4.png";
 images[4] = "images/img5.jpg";
 
 // Change Image
