--- a/week 4/index.html
+++ b/week 4/index.html
@@ -1,146 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wanderlust Voyages | Travel Agency</title>
-  <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <!-- Main Container -->
-  <div>
-
-    <!-- Header Section -->
+  <html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Cities info in Json & Ajax</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <script jQuery from a CDN </script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    </head>
+    <body>
     <header>
-      <h1 class="headeraH1">Wanderlust Voyages | Travel Agency</h1>
+    <h1>Cities info in JSON and AJAX </h1>
+    <button id="btn">Fitch info for 3 cities</button>
     </header>
-
-   <!— Navigation Section —>
-<nav class=“sticky-nav”>
-  <ul>
-    <li><a href=“index.html”>Home</a></li>
-    <li><a href=“about.html”>About</a></li>
-    <li><a href=“services.html”>Services</a></li>
-    <li><a href=“gallery.html”>Gallery</a></li>
-    <li><a href=“contact.html”>Contact</a></li>
-    <li><a href=“tasks.html”>Tasks</a></li>
-  </ul>
-</nav>
-
-    <!-- Banner Section -->
-    <section class="banner-container">
-<img name="slide" alt="Alt goes here" title="Title goes here"
-width="70%"/>
-</section>
-
-    <!-- Main Content Section -->
-    <main class="services">
-
-      <!-- About Us -->
-      <section>
-        <h1>Our Story</h1>
-        <p>
-          Every journey has a beginning, and ours started on the bustling streets of Bangkok. 
-          After a chance meeting between Jane and John, two avid travelers from different corners of the world, 
-          <b>Wanderlust Voyages</b> was born out of a shared dream to help others experience the beauty and wonder of our planet.
-        </p>
-        <p>We provide top-notch services to our clients.</p>
-      </section>
-
-      <!-- Our Services -->
-      <section>
-        <h2>Our Services</h2>
-        <div class="services-container">
-
-          <div class="service-column">
-            <img src="images/Flights.png" alt="Illustration representing flight bookings">
-            <h3>Flight and Transport Bookings</h3>
-            <p>One of the primary services offered by travel agencies is the reservation of flights.</p>
-          </div>
-
-          <div class="service-column">
-            <img src="images/ladies facial.png" alt="Illustration of a hotel">
-            <h3>Accommodation Reservations</h3>
-            <p>Numerous hotels are affiliated and partnered with travel firms.</p>
-          </div>
-
-          <div class="service-column">
-            <img src="images/tour packages.png" alt="Illustration representing tour packages">
-            <h3>Itinerary Planning and Tour Packages</h3>
-            <p>Travel agencies offer customized and pre-packaged tours to suit the preferences of travelers.</p>
-          </div>
-
-          <div class="service-column">
-            <img src="images/reservation.png" alt="Illustration representing activities and excursions">
-            <h3>Activity & Excursion Bookings</h3>
-            <p>We select and reserve a wide variety of regional excursions and activities for life-changing experiences.</p>
-          </div>
-
-        </div>
-      </section>
-
-      <!-- Pricing Section -->
-      <section>
-        <h2>Pricing</h2>
-        <p>Please contact us for pricing information on our services.</p>
-      </section>
-
-      <!-- Call to Action -->
-      <section class="cta-container">
-        <h2>Ready to Experience Our Services?</h2>
-        <p>Join us today and discover the difference we can make for you!</p>
-        <a href="form.html" class="cta-button"><span>Contact Us Now</span></a>
-      </section>
-
-    </main>
-
-    <!-- Footer Section -->
-    <footer>
-      <ul>
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-        <li><a href="https://twitter.com/">Twitter</a></li>
-        <li><a href="https://www.instagram.com/">Instagram</a></li>
-      </ul>
-      <p>&copy; 2024 Wanderlust Voyages | Travel Agency. All rights reserved.</p>
-    </footer>
-  </div>
-  <script>
-       var i = 0; 			// Start Point
-var images = [];	// Images Array
-var time = 3000;	// Time Interval Between Switch
-	 
-// Image List
-images[0] = "images/img1.jpg";
-images[1] = "images/img2.jpg";
-images[2] = "images/img3.jpg";
-images[3] = "images/img5.jpg";
-
-// Change Image
-function changeImg(){
-	document.slide.src = images[i];
-
-	// Check If Index Is Under Max
-	if(i < images.length - 1){
-	  // Add 1 to Index
-	  i++; 
-	} else { 
-		// Reset Back To O
-		i = 0;
-	}
-
-	// Run function every x seconds
-	setTimeout("changeImg()", time);
-}
-
-// Run function when page loads
-window.onload=changeImg;
-
-      </script>
-</body>
-</html>
-
+    <div id="city-info"></div>
+    <script src="main.js"></script>
+    </body>
+    </html>
